--- a/array.html
+++ b/array.html
@@ -11,6 +11,7 @@
 
 	<ul id="fruitList"></ul>
 
+  <script src="jquery-3.2.1.min.js"></script>
 	<script src="array.js"></script>
   </body>
 </html>
